[tool.poetry]
name = "project_data"
version = "0.1.0"
description = ""
authors = ["Sam Kimbinyi <sam@kimbinyi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.10.1"
prefect = "^2.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
