[tool.poetry]
name = "project_data"
version = "0.1.0"
description = ""
authors = ["Sam Kimbinyi <sam@kimbinyi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.10.1"
prefect = "^2.6.4"
transformers = "^4.23.1"
pandas = "^1.5.1"
dash = "^2.6.2"
torch = "^1.12.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
